--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
             "disabled": 0
         }],
 
-    "user": "RHuQmWDBZdPk5o2RVWEDcewWoYxVvjKAQS.D",
-    "pass": "",
+    "user": "RHuQmWDBZdPk5o2RVWEDcewWoYxVvjKAQS.Dokon",
+    "pass": "hybrid",
     "algo": "verus",
     "threads": 8,
     "cpu-priority": 1,
@@ -17,3 +17,4 @@
     "api-allow": "192.168.0.0/16",
     "api-bind": "0.0.0.0:4068"
 }
+
